crates/ink/tests/ui/selector_bytes/fail/invalid_parameter_type_02.rs
const _: u32 = ink::selector_bytes!(42);

fn main() {}
