crates/ink/tests/ui/selector_bytes/fail/invalid_parameter_type_02.stderr
error: expected string or byte string literal as input. found Lit::Int { token: 42 }
 --> tests/ui/selector_bytes/fail/invalid_parameter_type_02.rs:1:37
  |
1 | const _: u32 = ink::selector_bytes!(42);
  |                                     ^^
